--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </head>
 
 <body>
-
-
+<div class="black"></div>
+   
     <div class="sora">
         <h1>We are E-sports team Meg-M1Lx!</h1>
     </div>
@@ -67,6 +67,10 @@
         </video>
     </div>
 
+   
+<div class="fake"></div>
+   
+   
     <div class="main">
         <div class="cover-img2"></div>
         <div class="shape2"></div>
