--- a/index.html
+++ b/index.html
@@ -2,14 +2,7 @@
 <html lang="ja">
 
 <head>
-    <nav>
-        <h1>Meg-m1lx</h1>
-        <ul>
-            <li a="belief">belief</li>
-            <li>player</li>
-            <li>about clan</li>
-        </ul>
-    </nav>
+
     <meta charset="utf-8">
     <title>Mini Web</title>
     <link href="./css/style.css" rel="stylesheet">
@@ -44,7 +37,7 @@
 </head>
 
 <body>
-<div class="black"></div>
+    <div class=black></div>
    
     <div class="sora">
         <h1>We are E-sports team Meg-M1Lx!</h1>
