--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
         });
 
     </script>
-
 </head>
 
 <body>
-    <div class=black></div>
+
    
     <div class="sora">
         <h1>We are E-sports team Meg-M1Lx!</h1>
@@ -61,8 +60,7 @@
     </div>
 
    
-<div class="fake"></div>
-   
+
    
     <div class="main">
         <div class="cover-img2"></div>
@@ -76,7 +74,7 @@
     </div>
 
 
-    <video class="first" muted autoplay>
+    <video class="the" muted autoplay>
         <source src="main4-4.mp4" type="video/mp4">
 
     </video>
