--- a/index.html
+++ b/index.html
@@ -31,19 +31,15 @@
             });
 
         });
-
     </script>
 </head>
 
 <body>
 
-   
     <div class="sora">
         <h1>We are E-sports team Meg-M1Lx!</h1>
     </div>
     <div class="shape">
-    </div>
-    <div class="shape1">
     </div>
 
 
@@ -59,27 +55,24 @@
         </video>
     </div>
 
-   
+    <a href="#tobe">
+    <div class="cir">
+    </div>
+    </a>
 
-   
-    <div class="main">
-        <div class="cover-img2"></div>
-        <div class="shape2"></div>
-        <div class="shape3"></div>
 
-        <div class="player1">
-            <img src="fish.jpg" alt="">
-        </div>
-
+    <div class="backg">
+       <div id="tobe"></div>
+       <div class="gray"><img src="flag2.png"></div>
+        <div class="white"></div>
     </div>
 
-
-    <video class="the" muted autoplay>
-        <source src="main4-5.mp4" type="video/mp4">
-
-    </video>
-
-
+<div class="mem">
+    <p>MEMBER
+    </p>
+    <li>
+    </li>
+</div>
 
 
 </body>
