before create the next page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <title>Mini Web</title>
-    <link href="./css/style2.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Crimson+Text|Merriweather|Oswald" rel="stylesheet">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
