--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-<div class="black"></div>
+
 
     <div class="sora">
         <h1>We are E-sports team Meg-M1Lx!</h1>
@@ -49,8 +49,8 @@
 
     <div class="movie">
         <img src="flag2.png" alt="">
-        <h1>E-sports team</h1>
-        <h2>Meg-M1Lx</h2>
+    
+        <h2>MegM1Lx</h2>
 
         <div class="cover-img"></div>
 
@@ -71,9 +71,9 @@
         <div class="gray"><img src="flag2.png"></div>
         <div class="white">
             <p>MEG-M1Lx</p>
-            <h1>we are e-sports team MEG-M1Lx act in japan.<br>
-                the team established in 2013.<br>
-                we gather together to make the best atmosphere,communication, <br>
+            <h1>We are e-sports team MEG-M1Lx act in japan.<br>
+                The team established in 2013.<br>
+                We gather together to make the best atmosphere,communication, <br>
                 and teamwork only to win.
             </h1>
         </div>
