--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
     <div class="shapea"></div>
     <div class="shapeb"></div>
 
+   
+   
     <div class="mem">
         <div class="in">
-            <p>MEMBER</p>
+            <p>CLAN MEMBER</p>
             <div id="hide"></div>
             <ul class="member">
                <li>w0u9uma<h9>clan master</h9>
