before delete go down botton

--- a/index.html
+++ b/index.html
@@ -59,15 +59,27 @@
         </video>
     </div>
 
+   <div class="nav">
+   <nav>
+       <ul>
+           <li>top</li>
+           <li>team</li>
+           <li>member</li>
+           <li>contact</li>
+           <li>stream</li>
+       </ul>
+   </nav>
+   </div>
+   
+   
     <a class="cir" href="#tobe">
         <span style="font-size: 3em; color: #000;">
             <i class="fas fa-angle-double-down"></i>
         </span>
     </a>
 
-
+  <div id="tobe"></div>
     <div class="backg">
-        <div id="tobe"></div>
         <div class="gray"><img src="flag2.png"></div>
         <div class="white">
             <p>MEG-M1Lx</p>
