--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
 <body>
 
-
+<div class="black"></div>
+   
     <div class="sora">
         <h1>We are E-sports team Meg-M1Lx!</h1>
     </div>
@@ -70,13 +71,6 @@
        </ul>
    </nav>
    </div>
-   
-   
-    <a class="cir" href="#tobe">
-        <span style="font-size: 3em; color: #000;">
-            <i class="fas fa-angle-double-down"></i>
-        </span>
-    </a>
 
   <div id="tobe"></div>
     <div class="backg">
@@ -98,21 +92,23 @@
    
     <div class="mem">
         <div class="in">
+           <div class="topline"></div>
+           <div class="bottomline"></div>
             <p>CLAN MEMBER</p>
             <div id="hide"></div>
             <ul class="member">
-               <li>w0u9uma<h9>clan master</h9>
-               
-               </li>
-                <li>Kaito</li>
-                <li>R-S800</li>
-                <li>Yuuki</li>
-                <li>Dango</li>
+                <div id="right">
                 <li>Yua</li>
                 <li>makaron</li>
                 <li>gosho</li>
                 <li>kentomeiji</li>
                 <li>mushroom</li>
+                </div>
+                 <li>w0u9uma</li>
+                <li>Kaito</li>
+                <li>R-S800</li>
+                <li>Yuuki</li>
+                <li>Dango</li>
             </ul>
 
         </div>
