--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
             </ul>
 
         </div>
+        
+        <div class="flag">
+         <div class="bgcolor"></div>
+           <div id="flag">
+               <p>clan logo</p>
+            <img src="flag2.png">
+           </div>
+            
+        </div>
 
     </div>
 
