--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
         </div>
     </div>
 
+
     <div class="shapea"></div>
+    <div class="shapeaplus"></div>
+     <div class="shapeaplusb"></div>
+    <div class="shapeaminus"></div>
+    <div class="shapeaminusb"></div>
     <div class="shapeb"></div>
 
 
