--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="shapea"></div>
     <div class="shapeaplus"></div>
      <div class="shapeaplusb"></div>
+       <div class="shapeaplusc"></div>
     <div class="shapeaminus"></div>
     <div class="shapeaminusb"></div>
     <div class="shapeb"></div>
